testsuite/tests/parser/should_fail/T15730.hs
module T15730 where

x = 1 / {-# SCC ann #-} 2 / 2
