testsuite/tests/parser/should_fail/T15730.stderr

T15730.hs:3:9: error:
    A pragma is not allowed in this position: {-# SCC ann #-}
